// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component - Critical Variant Tests renders all sizes with default variant correctly 1`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
>
  default
</button>
`;

exports[`Button Component - Critical Variant Tests renders all sizes with default variant correctly 2`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
>
  large
</button>
`;

exports[`Button Component - Critical Variant Tests renders all sizes with default variant correctly 3`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-8 px-2 py-2 f-13-500"
>
  medium
</button>
`;

exports[`Button Component - Critical Variant Tests renders all sizes with default variant correctly 4`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-7 px-3 f-12-500"
>
  small
</button>
`;

exports[`Button Component - Critical Variant Tests renders all sizes with default variant correctly 5`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-[26px] rounded-md px-2.5 py-1.5 f-11-500"
>
  xsmall
</button>
`;

exports[`Button Component - Critical Variant Tests renders all sizes with default variant correctly 6`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-5 rounded-sm px-0.5 py-1 f-11-500"
>
  xxsmall
</button>
`;

exports[`Button Component - Critical Variant Tests renders all sizes with default variant correctly 7`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 w-10"
>
  icon
</button>
`;

exports[`Button Component - Critical Variant Tests renders all variants with default size correctly 1`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
>
  default
</button>
`;

exports[`Button Component - Critical Variant Tests renders all variants with default size correctly 2`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 py-3 px-4 f-14-500"
>
  destructive
</button>
`;

exports[`Button Component - Critical Variant Tests renders all variants with default size correctly 3`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground disabled:bg-GRAY_100 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
>
  outline
</button>
`;

exports[`Button Component - Critical Variant Tests renders all variants with default size correctly 4`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-transparent text-primary border border-gray-400 hover:bg-secondary/80 disabled:bg-GRAY_100 disabled:text-GRAY_700 disabled:!cursor-not-allowed h-10 py-3 px-4 f-14-500"
>
  secondary
</button>
`;

exports[`Button Component - Critical Variant Tests renders all variants with default size correctly 5`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-10 py-3 px-4 f-14-500"
>
  ghost
</button>
`;

exports[`Button Component - Critical Variant Tests renders all variants with default size correctly 6`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 text-primary underline-offset-4 hover:underline h-10 py-3 px-4 f-14-500"
>
  link
</button>
`;

exports[`Button Component - Functional Tests matches snapshot for default button 1`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
>
  Snapshot
</button>
`;

exports[`Button Component - Functional Tests matches snapshot for destructive variant 1`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 py-3 px-4 f-14-500"
>
  Delete
</button>
`;

exports[`Button Component - Functional Tests matches snapshot for icon size 1`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 w-10"
>
  🔍
</button>
`;

exports[`Button Component - Functional Tests matches snapshot for outline variant 1`] = `
<button
  class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground disabled:bg-GRAY_100 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500"
>
  Outline
</button>
`;

exports[`Button Component - Functional Tests matches snapshot when loading 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-secondary hover:bg-primary/90 active:bg-GRAY_950 disabled:text-GRAY_700 disabled:cursor-not-allowed h-10 py-3 px-4 f-14-500 cursor-not-allowed opacity-70"
  disabled=""
>
  <div
    class="flex w-full items-center justify-center"
  >
    <svg
      class="lucide lucide-loader-circle animate-spin"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="width: 16px; height: 16px;"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
  </div>
</button>
`;
